[package]
name = "webeasy-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive"] }
futures = "0.3.28"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rss = "2.0.6"
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
voyager = "0.2.1"
warp = "0.3.5"
